# auto_project

./: .dockerignore  .gitignore  BUILD_FIX.md  DATABASE_SETUP.md  DEPLOY-AZAUTOS.md  DEPLOY-README.md  DEPLOYMENT.md  Dockerfile  Dockerfile.dev  FINAL_RENDER_FIX.md  PRODUCTION_SEED_GUIDE.md  README-DEPLOY.md  README-Docker.md  README-LOCAL-DOCKER.md  README.md  RENDER_BUILD_FIX.md  auto_project.code-workspace  crontab.example  deploy-azautos.sh  deploy-fresh.sh  deploy-to-server.sh  deploy.sh  docker-compose.local.yml  docker-compose.prod.yml  docker-compose.yml  env.example  env.local.example  env.production  env.production.example  env.staging  fresh-install-azautos.sh  monitor.sh  next.config.mjs  nginx.conf  package-lock.json  package.json  pyrightconfig.json  quick-commands.sh  render.yaml  server-deploy.sh  (+17 more)
.next/: app-build-manifest.json  trace
app/: globals.css  layout.tsx  page.tsx
backend/: .dockerignore  .gitignore  Dockerfile  README-Docker.md  create_superuser.py  db.sqlite3  docker-compose.yml  env.docker  env.example  init_db.py  manage.py  pyproject.toml  requirements.txt  start-docker.bat  start-docker.sh
backend/cars/: admin.py  authentication.py  models.py  serializers.py  urls.py  views.py
backend/cars/migrations/: 0001_initial.py  0002_alter_car_body_type_alter_car_color_and_more.py
backend/carspark_backend/: asgi.py  settings.py  storage.py  urls.py  wsgi.py
backend/typings/: __init__.py  django-stubs.pyi
components/: car-card.tsx  car-filters.tsx  dealer-header.tsx  footer.tsx  header.tsx  image-gallery.tsx  image-upload.tsx  (+4 more)
(+156 files in other folders)
